# Agillee

./: .gitignore  Cargo.toml  Dockerfile  README.md  Rocket.toml  docker-compose.yml  logfile
docs/: schema.md
src/: cli.rs  commander.rs  database.rs  edge.rs  edges.rs  lib.rs  main.rs  object.rs  objects.rs  relation.rs  structure.rs  table.rs
src/data/: database.rs  table.rs
src/html/: .object.rs.kak.fylJHI
src/models/: edge.rs  edges.rs  form.rs  object.rs  objects.rs  structure.rs
src/web/: routes.rs  style.css  templates.rs
