[package]
name = "agillee"
version = "0.1.0"
authors = ["halmelachine <outrolledeye@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7"
postgres = "0.19"
itertools = "0.10"
rocket = "0.5.0-rc.1"
tokio = "1.15"

[dependencies.rocket_sync_db_pools]
version = "0.1.0-rc.1"
default-features = false
features = ["postgres_pool"]
